[gd_scene load_steps=3 format=3 uid="uid://ts4g24ysfkww"]

[ext_resource type="Script" uid="uid://cp4jc16qvuto4" path="res://location_transitioner.gd" id="1_xtrsk"]
[ext_resource type="PackedScene" uid="uid://dac2gl0j3qte3" path="res://intractble_indicator.tscn" id="2_1ojlq"]

[node name="exit" type="Area2D"]
collision_layer = 32
collision_mask = 64
script = ExtResource("1_xtrsk")

[node name="Intractble_indicator" parent="." instance=ExtResource("2_1ojlq")]
position = Vector2(0.99999994, -36.999996)
animation = &"Show"
frame = 0
frame_progress = 0.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="animation_finished" from="Intractble_indicator" to="." method="_on_intractble_indicator_animation_finished"]
